# LLMDriftTracker

./: .dockerignore  .gitignore  Dockerfile  KNOWN_ISSUES.md  README.md  agent.py  app.py  auth.py  bootstrap.py  check_token.py  cli.py  config.example.json  config.json  dataverse.py  defaults.json  docker-compose.yml  drift  drift.bat  eval_client.py  notifier.py  pyproject.toml  reasoning.py  report.py  requirements.txt  store.py
.claude/: settings.local.json
.streamlit/: config.toml
agent/: auth.py  dataverse.py  eval_client.py  events.py  logger.py  lore.py  main.py  notifier.py  reasoning.py  report.py  store.py  wizard.py
dashboard/: app.py  spinner.py  theme.py
dashboard/_pages/: ashoka.py  control.py  logs.py  setup.py
dashboard/pages/: 1_Setup.py  2_Data.py  2_Identity.py  ashoka.py  data.py  events.py  logs.py  setup.py
data/70e4f3ba-782e-f111-88b4-000d3a3ace47/: tracking.json
data/70e4f3ba-782e-f111-88b4-000d3a3ace47/runs/: 398aa1df-12ca-4641-b93b-c57aa4c3f228_20260418T133900.json
docker/: Dockerfile  azure-deploy.sh  docker-compose.yml
scripts/: gen_dummy_data.py  probe_model.py  seed_events.py
