[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-drift-tracker"
version = "1.0.0"
description = "Autonomous AI model drift detection for Copilot Studio bots"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "msal",
    "schedule",
    "openai",
    "azure-identity",
    "streamlit",
    "plotly",
]

[project.scripts]
drift = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "dashboard*"]
